--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
+    - name: Jest Code Coverage Report
     - uses: ziishaned/jest-reporter-action@v0.0.1
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
