--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Jest Code Coverage Report
-    - uses: ziishaned/jest-reporter-action@v0.0.1
+      uses: ziishaned/jest-reporter-action@v0.0.1
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         test-command: "yarn jest --coverage"
